# platinum-gtk

./: .gitignore  README.md  meson.build
.github/workflows/: main.yml
pages/: new_window.html  quickstart.html
plugins/: README.md
readme/: _config.yml
src/: IconButton.vala  Plugin.vala  SegmentedButton.vala  SegmentedButtonGroup.vala  SettingsMenu.vala  SettingsSidebar.vala  TabBar.vala  TabbedWebView.vala  main.vala
src/styles/: default.css  default.dark.colors.css
styles/default.theme/: layout.css
